# Alertalot

./: .gitignore  .pylintrc  CLAUDE.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: _publish.yaml  _publish_local.yaml  _tests.yaml  dist-local.yaml  dist-test.yaml  dist.yaml  master-workflow.yaml  tests.yaml  version-workflow.yaml
alertalot/: __init__.py  main.py
alertalot/actions/: aws_test_action.py  create_alarms_action.py  show_alarms_template_action.py  show_config_action.py  show_parameters_action.py  show_target_action.py  show_variables_action.py  test_aws_action.py
alertalot/entities/: abstract_aws_lb_entity.py  aws_alb_entity.py  aws_ebs_entity.py  aws_ec2_entity.py  aws_entity_factory.py  aws_generic_entity.py  aws_lambda_entity.py  aws_nlb_entity.py  aws_rds_entity.py  aws_s3_entity.py  aws_target_group_entity.py  base_aws_entity.py
alertalot/exception/: invalid_template_exception.py  unidentified_type_exception.py
alertalot/generic/: args_object.py  config.py  file_loader.py  input_parser.py  output.py  parameters.py  target_type.py  variables.py
alertalot/validation/: alarms_config_validator.py  aws_alarm_validator.py
alertalot/validators/: ec2_validator.py  generic_validator.py
docs/files/: variables.md
examples/: config.yaml  ec2-application.yaml  variables-limits.yaml  variables.yaml
schemes/: config.json  params.json
tests/: .pylintrc
tests/entities/: test_aws_entity_factory.py
tests/exception/: test_invalid_template_exception.py  test_unidentified_type_exception.py
(+17 files in other folders)
